Training loop runs

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,18 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Virtual environments
+venv/
+.venv/
+deepmind/
+spectral_ssm/
+
+# Linter
+.ruff_cache/
+
+# Dataset
+data/
+
 # Distribution / packaging
 .Python
 build/
