--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/windsornguyen/spectral_ssm"
 keywords = ["state-space-model"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = "^3.8"
 torch = "^2.2.1"
 torchvision = "^0.17.1"
 tqdm = "^4.66.2"
