--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,3 @@
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.12" and platform_system == "Windows"
-filelock==3.13.1 ; python_version >= "3.10" and python_version < "3.12"
-fsspec==2024.3.1 ; python_version >= "3.10" and python_version < "3.12"
-jinja2==3.1.3 ; python_version >= "3.10" and python_version < "3.12"
-markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "3.12"
-mpmath==1.3.0 ; python_version >= "3.10" and python_version < "3.12"
-networkx==3.2.1 ; python_version >= "3.10" and python_version < "3.12"
-numpy==1.26.4 ; python_version >= "3.10" and python_version < "3.12"
-nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cudnn-cu12==8.9.2.26 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-nvjitlink-cu12==12.4.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.12"
-pillow==10.2.0 ; python_version >= "3.10" and python_version < "3.12"
-sympy==1.12 ; python_version >= "3.10" and python_version < "3.12"
-torch==2.2.1 ; python_version >= "3.10" and python_version < "3.12"
-torchvision==0.17.1 ; python_version >= "3.10" and python_version < "3.12"
-tqdm==4.66.2 ; python_version >= "3.10" and python_version < "3.12"
-triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.12" and python_version >= "3.10"
-typing-extensions==4.10.0 ; python_version >= "3.10" and python_version < "3.12"
+torch
+torchvision
+tqdm
