--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ ssm_env/
 # Data to test Transformer with
 transformer/data/
 
+# Results
+transformer/data/results
+
 # Training artifacts
 *.slurm
 checkpoints/
