--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,22 +9,15 @@ repository = "https://github.com/windsornguyen/spectral_ssm"
 keywords = ["spectral state space model"]
 
 [tool.poetry.dependencies]
-python = "^3.9, <=3.11.9"
-torch = "2.2.2"
-torchvision = "0.17.2"
-typing-extensions = "4.9.0"
-pyyaml = "6.0.1"
-pillow = "10.2.0"
-numpy = "1.26.4"
-sympy = "1.12"
-tqdm = "^4.65.0"
+python = "^3.9, <=3.12.0"
+torch = "^2.3.1"
 
 [tool.poetry.dev-dependencies]
 # See `ruff help` for more on Ruff's top-level commands.
-ruff = "^0.3.7"
+ruff = "^0.4.8"
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.3"
+ipykernel = "^6.29.4"
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
