STU much faster.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,33 @@
 [tool.poetry]
 name = "spectral_ssm"
 version = "1.0"
-description = "Dependency manager Google DeepMind Spectral State Space model"
-authors = ["Yagiz Devre", "Evan Dogariu", "Chiara von Gerlach", "Isabel Liu", "Windsor Nguyen", "Dwaipayan Saha"]
+description = "Dependency manager Google DeepMind's Spectral State Space Model"
 license = "Apache 2.0"
 homepage = "https://arxiv.org/abs/2312.06837"
 repository = "https://github.com/windsornguyen/spectral_ssm"
-keywords = ["spectral state space model"]
+authors = [
+    "Yagiz Devre",
+    "Evan Dogariu",
+    "Chiara von Gerlach",
+    "Isabel Liu",
+    "Windsor Nguyen",
+    "Dwaipayan Saha",
+]
+keywords = [
+    "pytorch",
+    "state space model",
+    "spectral filtering",
+    "state space model",
+    "deep learning",
+    "machine learning",
+    "time series",
+    "dynamical systems",
+]
+
 
 [tool.poetry.dependencies]
-python = "^3.9, <=3.12.0"
-torch = "^2.3.1"
+python = "^3.8"
+torch = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 # See `ruff help` for more on Ruff's top-level commands.
@@ -48,7 +65,6 @@ exclude = [
 line-length = 80
 indent-width = 4
 
-# Assuming Python 3.11+.
 target-version = "py311"
 
 [tool.ruff.lint]
@@ -63,11 +79,11 @@ fixable = ["ALL"]
 unfixable = []
 
 [tool.ruff.lint.flake8-quotes]
-docstring-quotes = "double"  # Enforce double quotes for docstrings
-inline-quotes = "single"     # Enforce single quotes for inline strings
+docstring-quotes = "double" # Enforce double quotes for docstrings
+inline-quotes = "single"    # Enforce single quotes for inline strings
 
 [tool.ruff.format]
-quote-style = "single"       # Default to single quotes for auto-formatting
+quote-style = "single" # Default to single quotes for auto-formatting
 
 # Like Black, indent with spaces, rather than tabs.
 indent-style = "space"
